@@ -5,7 +5,7 @@
 
 	<groupId>com.landawn</groupId>
 	<artifactId>abacus-cache</artifactId>
-	<version>1.2.9</version>
+	<version>1.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>abacus-cache</name>
@@ -15,6 +15,7 @@
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.release>23</maven.compiler.release>
 		<junit.jupiter.version>5.10.1</junit.jupiter.version>
 		<junit.platform.version>1.10.1</junit.platform.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -101,6 +102,8 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
+					<release>${maven.compiler.release}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
